[package]
name = "cosmwasm-name-system-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0", features = ["staking"] }
cw-storage-plus = "1.1.0"

[dev-dependencies]
cw-multi-test = "0.17.0"
